<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:vudroid="http://schemas.android.com/apk/res/vudroid"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:summary="@string/pref_ui_category_summary"
        android:title="@string/pref_ui_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="loadrecent"
            android:summary="@string/pref_loadrecent_summary"
            android:title="@string/pref_loadrecent_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="nightmode"
            android:summary="@string/pref_nightmode_summary"
            android:title="@string/pref_nightmode_title" />

        <EditTextPreference
            android:defaultValue="100"
            android:key="brightness"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_brightness_summary"
            android:title="@string/pref_brightness_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="brightnessnightmodeonly"
            android:summary="@string/pref_brightnessnightmodeonly_summary"
            android:title="@string/pref_brightnessnightmodeonly_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keepscreenon"
            android:summary="@string/pref_keepscreenon_summary"
            android:title="@string/pref_keepscreenon_title" />

        <ListPreference
            android:defaultValue="Default"
            android:entries="@array/list_rotation"
            android:entryValues="@array/list_rotation_values"
            android:key="rotation"
            android:summary="@string/pref_rotation_summary"
            android:title="@string/pref_rotation_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fullscreen"
            android:summary="@string/pref_fullscreen_summary"
            android:title="@string/pref_fullscreen_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="title"
            android:summary="@string/pref_title_summary"
            android:title="@string/pref_title_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="title"
            android:key="pageintitle"
            android:summary="@string/pref_pageintitle_summary"
            android:title="@string/pref_pageintitle_title" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_scroll_category_summary"
        android:title="@string/pref_scroll_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="zoomdoubletap"
            android:summary="@string/pref_zoomdoubletap_summary"
            android:title="@string/pref_zoomdoubletap_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="tapscroll"
            android:summary="@string/pref_tap_summary"
            android:title="@string/pref_tap_title" />

        <EditTextPreference
            android:defaultValue="10"
            android:dependency="tapscroll"
            android:key="tapsize"
            android:maxLength="2"
            android:numeric="integer"
            android:summary="@string/pref_tapsize_summary"
            android:title="@string/pref_tapsize_title" />

        <EditTextPreference
            android:defaultValue="50"
            android:key="scrollheight"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_scroll_summary"
            android:title="@string/pref_scroll_title" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_memory_category_summary"
        android:title="@string/pref_memory_category" >

        <EditTextPreference
            android:defaultValue="0"
            android:key="pagesinmemory"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_pagesinmemory_summary"
            android:title="@string/pref_pagesinmemory_title" />

        <ListPreference
            android:defaultValue="Normal"
            android:entries="@array/list_decodemode"
            android:entryValues="@array/list_decodemode_values"
            android:key="decodemode"
            android:summary="@string/pref_decodemode_summary"
            android:title="@string/pref_decodemode_title" />

        <EditTextPreference
            android:defaultValue="256"
            android:key="maximagesize"
            android:maxLength="5"
            android:numeric="integer"
            android:summary="@string/pref_maximagesize_summary"
            android:title="@string/pref_maximagesize_title" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_render_category_summary"
        android:title="@string/pref_render_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="splitpages"
            android:summary="@string/pref_splitpages_summary"
            android:title="@string/pref_splitpages_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="singlepage"
            android:summary="@string/pref_singlepage_summary"
            android:title="@string/pref_singlepage_title" />

        <PreferenceCategory
            android:summary="@string/pref_singlepage_category_summary"
            android:title="@string/pref_singlepage_category" >

            <ListPreference
                android:defaultValue="By Width"
                android:dependency="singlepage"
                android:entries="@array/list_align"
                android:entryValues="@array/list_align_values"
                android:key="align"
                android:summary="@string/pref_align_summary"
                android:title="@string/pref_align_title" />

            <ListPreference
                android:defaultValue="None"
                android:dependency="singlepage"
                android:entries="@array/list_animation"
                android:entryValues="@array/list_animation_values"
                android:key="animationType"
                android:summary="@string/pref_animationtype_summary"
                android:title="@string/pref_animationtype_title" />
        </PreferenceCategory>
        
        <PreferenceScreen
            android:key="brfiletypespecific"
            android:summary="@string/pref_brfiletypespecific_summary"
            android:title="@string/pref_brfiletypespecific_title" >

            <PreferenceCategory
                android:key="brfiletypespecificdjvu"
                android:summary="@string/pref_brfiletypespecificdjvu_summary"
                android:title="@string/pref_brfiletypespecificdjvu_title" >

                <ListPreference
                    android:defaultValue="0"
                    android:entries="@array/list_djvu_rendering_mode"
                    android:entryValues="@array/list_djvu_rendering_mode_values"
                    android:key="djvu_rendering_mode"
                    android:summary="@string/pref_djvu_rendering_mode_summary"
                    android:title="@string/pref_djvu_rendering_mode_title" />
            </PreferenceCategory>
        </PreferenceScreen>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="book_prefs"
        android:summary="@string/pref_book_category_summary"
        android:title="@string/pref_book_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="book_splitpages"
            android:summary="@string/pref_splitpages_summary"
            android:title="@string/pref_splitpages_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="book_singlepage"
            android:summary="@string/pref_singlepage_summary"
            android:title="@string/pref_singlepage_title" />

        <PreferenceCategory
            android:summary="@string/pref_singlepage_category_summary"
            android:title="@string/pref_singlepage_category" >

            <ListPreference
                android:defaultValue="By Width"
                android:dependency="book_singlepage"
                android:entries="@array/list_align"
                android:entryValues="@array/list_align_values"
                android:key="book_align"
                android:summary="@string/pref_align_summary"
                android:title="@string/pref_align_title" />

            <ListPreference
                android:defaultValue=""
                android:dependency="book_singlepage"
                android:entries="@array/list_animation"
                android:entryValues="@array/list_animation_values"
                android:key="book_animationType"
                android:summary="@string/pref_animationtype_summary"
                android:title="@string/pref_animationtype_title" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="browserscreen"
        android:summary="@string/pref_browser_category_summary"
        android:title="@string/pref_browser_category" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="usebookcase"
            android:summary="@string/pref_usebookcase_summary"
            android:title="@string/pref_usebookcase_title" />

        <EditTextPreference
            android:defaultValue="/sdcard"
            android:key="brautoscandir"
            android:summary="@string/pref_brautoscandir_summary"
            android:title="@string/pref_brautoscandir_title" />

        <PreferenceCategory
            android:key="brfiletypesscreen"
            android:summary="@string/pref_brbrfiletypesscreen_summary"
            android:title="@string/pref_brbrfiletypesscreen_title" >

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypedjvu"
                android:summary="@string/pref_brfiletypedjvu_summary"
                android:title="@string/pref_brfiletypedjvu_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypedjv"
                android:summary="@string/pref_brfiletypedjv_summary"
                android:title="@string/pref_brfiletypedjv_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypepdf"
                android:summary="@string/pref_brfiletypepdf_summary"
                android:title="@string/pref_brfiletypepdf_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypexps"
                android:summary="@string/pref_brfiletypexps_summary"
                android:title="@string/pref_brfiletypexps_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypeoxps"
                android:summary="@string/pref_brfiletypeoxps_summary"
                android:title="@string/pref_brfiletypeoxps_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypecbz"
                android:summary="@string/pref_brfiletypecbz_summary"
                android:title="@string/pref_brfiletypecbz_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypecbr"
                android:summary="@string/pref_brfiletypecbr_summary"
                android:title="@string/pref_brfiletypecbr_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="brfiletypefb2"
                android:summary="@string/pref_brfiletypefb2_summary"
                android:title="@string/pref_brfiletypefb2_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="brfiletypefb2.zip"
                android:summary="@string/pref_brfiletypefb2.zip_summary"
                android:title="@string/pref_brfiletypefb2.zip_title" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>