<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mainmenu_nav_menu"
        android:icon="@drawable/viewer_actionbar_menu_navigation"
        android:title="@string/menu_navigation_menu">
        <menu>
            <item
                android:id="@+id/mainmenu_outline"
                android:icon="@drawable/viewer_menu_outline"
                android:title="@string/menu_outline"/>
            <item
                android:id="@+id/mainmenu_search"
                android:icon="@drawable/viewer_menu_searchtext"
                android:title="Search"/>
            <item
                android:id="@+id/mainmenu_bookmark"
                android:icon="@drawable/viewer_menu_bookmark_add"
                android:title="@string/menu_add_bookmark"/>
            <item
                android:id="@+id/mainmenu_goto_page"
                android:icon="@drawable/viewer_menu_goto"
                android:title="@string/menu_goto_page"/>
        </menu>
    </item>
    <item
        android:id="@+id/mainmenu_fastsettings_menu"
        android:icon="@drawable/viewer_actionbar_menu_fastsettings"
        android:title="@string/menu_fastsettings_menu">
        <menu>
            <item
                android:id="@+id/mainmenu_fullscreen"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_fullscreen"
                android:title="@string/pref_fullscreen_title"/>
            <item
                android:id="@+id/mainmenu_showtitle"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_showtitle"
                android:title="@string/pref_title_title"/>
            <item
                android:id="@+id/mainmenu_force_portrait"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_force_portrait"
                android:title="@string/menu_force_portrait"/>
            <item
                android:id="@+id/mainmenu_force_landscape"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_force_landscape"
                android:title="@string/menu_force_landscape"/>
            <item
                android:id="@+id/mainmenu_nightmode"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_daynight"
                android:title="@string/menu_nightmode"/>
            <item
                android:id="@+id/mainmenu_splitpages"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_split_pages"
                android:title="@string/pref_splitpages_title"/>
            <item
                android:id="@+id/mainmenu_croppages"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_crop_auto"
                android:title="@string/pref_croppages_title"/>
            <item
                android:id="@+id/mainmenu_crop"
                android:icon="@drawable/viewer_menu_crop_manual"
                android:title="@string/menu_crop"/>
            <item
                android:id="@+id/mainmenu_thumbnail"
                android:icon="@drawable/viewer_menu_thumbnail"
                android:title="@string/menu_thumbnail"/>
            <item
                android:id="@+id/mainmenu_zoom"
                android:checkable="true"
                android:icon="@drawable/viewer_menu_zoom"
                android:title="@string/menu_zoom"/>
            </menu>
    </item>
    <item
        android:id="@+id/mainmenu_settings_menu"
        android:icon="@drawable/viewer_actionbar_menu_settings"
        android:title="@string/menu_allsettings_menu">
        <menu>
            <item
                android:id="@+id/mainmenu_booksettings"
                android:icon="@drawable/viewer_menu_booksettings"
                android:title="@string/menu_booksettings"/>
            <item
                android:id="@+id/mainmenu_settings"
                android:icon="@drawable/common_menu_allsettings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/actions_toggleTouchManagerView"
                android:icon="@drawable/viewer_menu_tapconfig"
                android:title="@string/menu_tap_configuration"/>
            <item
                android:id="@+id/actions_keyBindings"
                android:icon="@drawable/viewer_menu_keybindings"
                android:title="@string/menu_key_bindings"/>
        </menu>
    </item>
    <item
        android:id="@+id/mainmenu_about"
        android:icon="@drawable/common_actionbar_about"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/mainmenu_close"
        android:icon="@drawable/common_actionbar_close"
        android:title="@string/menu_close"/>

</menu>