<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content" android:id="@+id/pass_text" android:text="@string/password_text" android:layout_width="match_parent"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/pass_req" android:inputType="textPassword"></EditText>
    <Button android:layout_height="wrap_content" android:text="@string/password_ok" android:id="@+id/pass_ok" android:layout_width="match_parent"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/password_cancel" android:id="@+id/pass_cancel" android:layout_width="match_parent"></Button>
    
</LinearLayout>
